header-page-birthday

--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Birthday Page</title>
-</head>
-<body>
-    <h1>Hello Word</h1>
-    <h2>hello Word</h2>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Birthday Page</title>
+		<link rel="stylesheet" href="style.css" />
+
+		<!-- Fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+			rel="stylesheet" />
+	</head>
+	<body>
+		<!-- Header-Start -->
+		<header>
+			<div class="container-header">
+				<div class="wrapper-header">
+					<div class="content-header">
+						<div class="text-header">
+							<h1>Happy Birtday</h1>
+						</div>
+						<div class="button-header">
+							<a href="">Let's Begin</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</header>
+		<!-- Header-End -->
+
+		<!-- Content-Start -->
+		<main>
+			<section class="container-content">
+				<div class="wrapper-content"></div>
+			</section>
+		</main>
+		<!-- Content-End -->
+	</body>
 </html>
