section-page-birthday

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 				<div class="wrapper-header">
 					<div class="content-header">
 						<div class="text-header">
-							<h1>Happy Birtday</h1>
+							<h1>Happy Birthday</h1>
 						</div>
-						<div class="button-header">
-							<a href="">Let's Begin</a>
+						<div class="button-header" id="scrollBtn">
+							<a href="#content">Let's Begin</a>
 						</div>
 					</div>
 				</div>
@@ -34,9 +34,27 @@
 		<!-- Content-Start -->
 		<main>
 			<section class="container-content">
-				<div class="wrapper-content"></div>
+				<div class="wrapper-content">
+					<div class="card-content">
+						<div class="img-content">
+							<img src="img/duck.jpg" />
+						</div>
+						<div class="text-content">
+							<h1>HAPPY BIRTHDAY</h1>
+							<h5 class="dear-content">Dear for me</h5>
+							<p class="message-content" id="content">
+								Hi..🎉 Happy birthday! 🎂 May this day be full of happiness and
+								may all your dreams come true. Keep shining and enjoy every
+								moment! Cheers! 🥳
+							</p>
+							<h5 class="name-content">Reza Arya Irhamilah</h5>
+						</div>
+					</div>
+				</div>
 			</section>
 		</main>
 		<!-- Content-End -->
+
+		<script src="script.js"></script>
 	</body>
 </html>
