--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Birthday Page</title>
 		<link rel="stylesheet" href="style.css" />
+		<link rel="icon" href="img/3d-fluency-partying-face.png" />
 
 		<!-- Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
