--- a/index.html
+++ b/index.html
@@ -10,52 +10,56 @@
 		<!-- Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
-			rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
 	</head>
 	<body>
-		<!-- Header-Start -->
-		<header>
-			<div class="container-header">
-				<div class="wrapper-header">
-					<div class="content-header">
-						<div class="text-header">
-							<h1>Happy Birthday</h1>
-						</div>
-						<div class="button-header" id="scrollBtn">
-							<a href="#content">Let's Begin</a>
-						</div>
-					</div>
-				</div>
+		<div class="bg-container">
+			<div class="balloon-container">
+				<img src="img/3d-fluency-party-balloon.png" class="balloon" alt="Balloon 1" />
+				<img src="img/3d-fluency-party-balloon.png" class="balloon" alt="Balloon 2" />
+				<img src="img/3d-fluency-party-balloon.png" class="balloon" alt="Balloon 3" />
+				<img src="img/3d-fluency-party-balloons.png" class="balloon" alt="Balloon 4" />
+				<img src="img/3d-fluency-party-balloons.png" class="balloon" alt="Balloon 5" />
+				<img src="img/3d-fluency-party-balloons.png" class="balloon" alt="Balloon 6" />
 			</div>
-		</header>
-		<!-- Header-End -->
-
-		<!-- Content-Start -->
-		<main>
-			<section class="container-content">
-				<div class="wrapper-content">
-					<div class="card-content">
-						<div class="img-content">
-							<img src="img/duck.jpg" />
-						</div>
-						<div class="text-content">
-							<h1>HAPPY BIRTHDAY</h1>
-							<h5 class="dear-content">Dear for me</h5>
-							<p class="message-content" id="content">
-								Hi..🎉 Happy birthday! 🎂 May this day be full of happiness and
-								may all your dreams come true. Keep shining and enjoy every
-								moment! Cheers! 🥳
-							</p>
-							<h5 class="name-content">Reza Arya Irhamilah</h5>
+				<!-- Header-Start -->
+				<header>
+					<div class="container-header">
+						<div class="wrapper-header">
+							<div class="content-header">
+								<div class="text-header">
+									<h1>Happy Birthday</h1>
+								</div>
+								<div class="button-header" id="scrollBtn">
+									<a href="#content">Let's Begin</a>
+								</div>
+							</div>
 						</div>
 					</div>
-				</div>
-			</section>
-		</main>
-		<!-- Content-End -->
+				</header>
+				<!-- Header-End -->
 
+				<!-- Content-Start -->
+				<main>
+					<section class="container-content">
+						<div class="wrapper-content">
+							<div class="card-content">
+								<div class="img-content">
+									<img src="img/duck.jpg" />
+								</div>
+								<div class="text-content">
+									<h1>HAPPY BIRTHDAY</h1>
+									<h5 class="dear-content">Dear for Friend</h5>
+									<p class="message-content" id="content">Hi..🎉 Happy birthday! 🎂 May this day be full of happiness and may all your dreams come true. Keep shining and enjoy every moment! Cheers! 🥳</p>
+									<h5 class="name-content">Reza Arya Irhamilah</h5>
+								</div>
+							</div>
+						</div>
+					</section>
+				</main>
+			</div>
+			<!-- Content-End -->
+		</div>
 		<script src="script.js"></script>
 	</body>
 </html>
